--- a/templates/event/event_single.html
+++ b/templates/event/event_single.html
@@ -15,50 +15,18 @@
 <div class="entry-image">
     <img src="/webhost_media/{{event.image1}}" style="width:500px; margin-bottom:30px;"/>
     
-    <div class="layout-entry-interactions">
+    <div class="layout-entry-interactions" style="width:500px;">
 
-
-
-    {% if comments %}    
-        <div class="page-subhero-text">Comments on this event</div>
-        {% for c in comments %}
-            <div class="entry-comment">
-                {{ c.content }}<br>
-                <div class="roboto-font">{{ c.time }}</div>
-            </div>
-        {% endfor %}
-    {% else %}
-        <div class="page-subhero-text">No comments on this event yet.</div>
-    {% endif %}
+    <div class="page-subhero-text">
+        <a href="{% url event.views.like_event event.id %}">Save this event!</a>
+    </div>
 
     {% if request.user.is_authenticated %}
-
-        <div class="page-subhero-text">
-            <a href="{% url event.views.like_event event.id %}">Save this event!</a>
-        </div>
-
-    <!--
-        <div class="page-subhero-text">
-            <a href="{% url event.views.like_event event.id %}" id="save-this-event">Save this event!</a>
-        </div>
-        <form id="saveform" action="save/" method="post">{% csrf_token %}
-            Share this to:&emsp;
-            <select name="msg_to_django_user_id">
-            {% for django_user in allusers %}
-                <option value="{{django_user.id}}">{{django_user.django_user}}</option>
-            {% endfor %}
-            </select>&emsp;
-            Write your message:&emsp;<input name ="content" value=""/>&emsp;
-            <input type="submit" value="Send" />
-        </form>
-    -->
-
-	    <form action="{{request.build_absolute_uri}}/email/" method="post">{% csrf_token %}
+        <form action="{{request.build_absolute_uri}}/email/" method="post">
+            {% csrf_token %}
             Share this via email:&emsp; 
             <select name="email_to">
-	       
             {% for user in auth_users %}
-		     
                 <option value="{{user.email}}">{{user}}</option>
             {% endfor %}
             </select>&emsp;
@@ -66,40 +34,55 @@
             <input type="submit" value="Send" />
         </form>
         <br>
-        <br>
-        
-        
+    {% endif %}
+
+    {% if comments %}    
+        <div class="page-subhero-text">Comments on this event</div>
+        {% for c in comments %}
+            <div class="entry-comment clearfix-modern">
+                <a href="/user/{{ c.user.id }}"
+	            title="Go to {{ c.user.django_user.username }}'s Profile">
+                <img class="user-avatar-mini" 
+	            src="/webhost_media/{{ c.user.avatar }} "/>
+	            </a>
+	            <div class="entry-comment-body">
+                {{ c.content }}<br>
+                <div class="roboto-font">{{ c.time }}</div>
+                </div>
+            </div>
+        {% endfor %}
+    {% else %}
+        <div class="page-subhero-text">No comments on this event yet.</div>
+    {% endif %}
+
+    {% if request.user.is_authenticated %}
+    
         <div class="page-subhero-text">Submit your comment</div>
         <form action="{% url event.views.add_comment event.id %}" method="POST">
             {% csrf_token %}
-            <textarea type="text" rows="5" cols="50" name="content" value="Post your comment here!"></textarea><br>
+            <textarea type="text" rows="5" cols="67" name="content" value="Post your comment here!"></textarea><br>
             <input type="submit" value="Post comment" />
         </form>
-    {% else %}
+
+        <div class="event-navi"><br><br>
+            <a href="/admin/event/event/{{event.id}}">Edit this event</a>
+        </div>
         
+    {% else %}
         <div class="page-subhero-text">
             <a href="{%url accounts.views.login %}">Login</a>
              is required for posting comments.
         </div>
     {% endif %}
 
-    {% if request.user.is_authenticated %}
-    <div class="event-navi">
-        <a href="/admin/event/event/{{event.id}}">Edit this event</a>
-    </div>
-    {% endif %}
 
     </div><!-- .layout-entry-interactions -->
-    
-    
     
     
 </div>
 
 
-
-
-<div class="entry-content" style="width:520px">
+<div class="entry-content" style="width:480px">
     <div class="event-meta">
         <div class="page-subhero-text">{{ event.event_time }}</div>
         <div class="page-subhero-text">{{ event.location }}</div>
