--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 {% endblock %}
 <link rel="stylesheet" href="/webhost_media/static/style.css" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="http://www.steamdev.com/zclip/js/jquery.zclip.min.js"></script>
 </head>
 
 <body>
