--- a/templates/event/event_search_results.html
+++ b/templates/event/event_search_results.html
@@ -1,26 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="layout-content-wrap">
 
+<div class="layout-content-header">
+    <h1 class="page-hero-text">Search events</h1>
+</div>
 
-<form role="search" method="get" id="searchform_test" action="/events/search">
+<form style="margin: 10px;" role="search" method="get" id="searchform_test" action="/events/search">
 
-          <input id="searchform-text" type="text" value="" name="query" id="query" />
-		<select id = "sorted_method_id" name="sorted_method">
-  			<option value="desc">Descending Order</option>
-  			<option value="asc">Ascending Order</option>
-  			<option value="alphabet">Alphabetical Order</option>
-		</select>
-
-          <input id="searchform-submit" type="submit" id="searchsubmit" value="Search" />
+    <input id="searchform-text" type="text" value="" name="query" id="query" />
+    <select id = "sorted_method_id" name="sorted_method">
+    <option value="desc">Descending Order</option>
+    <option value="asc">Ascending Order</option>
+    <option value="alphabet">Alphabetical Order</option>
+    </select>
+    <input id="searchform-submit" type="submit" id="searchsubmit" value="Search" />
 
 <br>
 {% for tag in tags %}
-{{tag}}:<input type="checkbox" id="{{tag}}_Alert" name="query_tag" value="{{tag}}"/><br>
-
+    {{tag}}:
+    <input type="checkbox" id="{{tag}}_Alert" name="query_tag" value="{{tag}}"/>&emsp;
 {% endfor %}
 </form>
-
 
 {% ifequal events_found|length 0 %}
 <p>No results found</p>
@@ -67,4 +69,5 @@ window.onload = function () {
 
 
 
+</div><!-- .layout-content-wrap -->
 {% endblock %}
