--- a/templates/event/event_single.html
+++ b/templates/event/event_single.html
@@ -9,12 +9,14 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+
+$('#share-content').hide();
+</script>
 
 
 <div class="layout-content-wrap">
 
-{{request.get_absolute_uri}}
 <div class="layout-content-header">
     <h1 class="page-hero-text">{{ event.title }}</h1>
 </div>
@@ -35,12 +37,12 @@
     </div>
     
     
-    <div class="entry-interaction-header page-subhero-text">
+    <div id="share-header" class="entry-interaction-header page-subhero-text">
         Share this event
     </div>
     
 <script>
-$(document).ready(function(){
+$(function(){    
     $('a#copy-button').onClick({ 
         alert("The link of this page is copied to your clipboard. Happy sharing!");
     });
@@ -52,7 +54,7 @@ $(document).ready(function(){
 </script>    
     
     
-    <div class="entry-interaction-content" style="text-transform:uppercase;">
+    <div id="share-content" class="entry-interaction-content" style="text-transform:uppercase;">
         Share this via URL&emsp;&emsp;
         <input id="copy-link" value="{{request.build_absolute_uri}}"></input>
         <a id="copy-button" href="#" class="">Copy</a>
