Fixing base for demo

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -40,7 +40,7 @@
 <br> 
 <label for="id_bio">WRITE A SHORT BIO FOR YOURSELF</label>
 <br> 
-<textarea id="id_bio" type = "text" name="bio" value="Just a mundane creature, a half-decent human being, a humble community member, a dedicated USF spirit."></textarea>
+<textarea id="id_bio" type = "text" name="bio" rows="3" cols="40">Just a mundane creature, a half-decent human being, a humble community member, a dedicated USF spirit.</textarea>
 
 <br><br>
 
