--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,7 @@
         <div class="sidebar-divider">GATEWAYS</div>
         <!--<h4><a href="/admin">Admin</a></h4>-->
         <h4><a href="{%url event.views.post %}">Submit event</a></h4>
+        <h4><a href="{%url event.views.search %}">Search event</a></h4>
         <h4><a href="{%url event.views.archives %}">Event archives</a></h4>
         <h4><a href="{%url event.views.msg_send %}">Send messages</a></h4>
         
