Started following Google coding style, refined registration process

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -18,11 +18,22 @@
 <br><br>
 
 <div class="page-subhero-text">Fill out your basic info</div>
-<table border="0" cellpadding="0" >
-{{form.as_table}} 
-</table>
-
+<label for="id_firstname">FIRSTNAME</label>
 <br>
+<input id="id_firstname" maxlength="30" type="text" name="firstname" size="20" />
+<br>
+<label for="id_lastname">LASTNAME</label>
+<br>
+<input id="id_lastname" maxlength="30" type="text" name="lastname" size="20" />
+<br>
+<label for="id_email">EMAIL</label>
+<br>
+<input id="id_email" maxlength="30" type="text" name="email" size="20" />
+<br>
+<label for="id_password">PASSWORD</label>
+<br>
+<input id="id_password" maxlength="30" type="password" name="password" size="20" />
+<br> 
 
 <div class="page-subhero-text">Tell us a bit more about yourself</div>
 
