--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -18,21 +18,32 @@
 <br><br>
 
 <div class="page-subhero-text">Fill out your basic info</div>
-<table border="0" cellpadding="0" >
-{{form.as_table}} 
-</table>
-
+<label for="id_firstname">FIRSTNAME</label>
 <br>
+<input id="id_firstname" maxlength="30" type="text" name="firstname" size="20" />
+<br>
+<label for="id_lastname">LASTNAME</label>
+<br>
+<input id="id_lastname" maxlength="30" type="text" name="lastname" size="20" />
+<br>
+<label for="id_email">EMAIL</label>
+<br>
+<input id="id_email" maxlength="30" type="text" name="email" size="20" />
+<br>
+<label for="id_password">PASSWORD</label>
+<br>
+<input id="id_password" maxlength="30" type="password" name="password" size="20" />
+<br><br> 
 
 <div class="page-subhero-text">Tell us a bit more about yourself</div>
 
-<label for="id_location">YOUR LOCATION</label>
+<label for="id_location">YOUR AFFILIATION</label>
 <br>
-<input id="id_location" maxlength="30" type="text" name="location" size="20" />
+<input type="radio" name="aff" value="student">STUDENT &emsp;
+<input type="radio" name="aff" value="staff">STAFF &emsp;
+<input type="radio" name="aff" value="faculty">FACULTY
 <br>
-<label for="id_interest">AN INTEREST YOU LOVE</label>
-<br>
-<input id="id_interest" maxlength="30" type="text" name="interest" size="20" />
+
 <br>
 <label for="id_position">YOUR CURRENT POSITION</label>
 <br>
