--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <li class="external-item"><a href="{%url accounts.views.login %}">Login</a></li>
         {% endif %}
 
-	   <li class="external-item"><a href="/notification/msg_box">Message Unread:<b style="backgroud-color:red;" id = "msg_new_number">{{msg_received_list|length}}</b> </a></li>
+	   <li class="external-item"><a href="/notification/msg_box">Message Unread:<b style="backgroud-color:red;" id = "msg_new_number">{{msg_unread}}</b> </a></li>
 	   <script>
 		function myFunction()
 		{
