--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -14,52 +14,45 @@
 
 <div class="page-subhero-text">Upload your profile image</div>
 <input type="file" name="picture"/>
-
 <br><br>
 
 <div class="page-subhero-text">Fill out your basic info</div>
-<label for="id_firstname">FIRSTNAME</label>
+<input type="text" id="id_firstname" name="firstname" placeholder=" FIRSTNAME " maxlength="100" size="20" />
+&emsp;
+<input type="text" id="id_lastname" name="lastname" placeholder=" LASTNAME " maxlength="100" size="20" />
 <br>
-<input id="id_firstname" maxlength="30" type="text" name="firstname" size="20" />
+<input type="text" id="id_email" name="email" placeholder=" EMAIL " maxlength="100" size="20" />
 <br>
-<label for="id_lastname">LASTNAME</label>
+<input type="password" id="id_password" name="password" placeholder=" PASSWORD " maxlength="30" size="20" />
 <br>
-<input id="id_lastname" maxlength="30" type="text" name="lastname" size="20" />
 <br>
-<label for="id_email">EMAIL</label>
-<br>
-<input id="id_email" maxlength="30" type="text" name="email" size="20" />
-<br>
-<label for="id_password">PASSWORD</label>
-<br>
-<input id="id_password" maxlength="30" type="password" name="password" size="20" />
-<br><br> 
 
 <div class="page-subhero-text">Tell us a bit more about yourself</div>
 
 <label for="id_location">YOUR AFFILIATION</label>
 <br>
-<input type="radio" name="aff" value="student">STUDENT &emsp;
-<input type="radio" name="aff" value="staff">STAFF &emsp;
-<input type="radio" name="aff" value="faculty">FACULTY
+<input type="radio" name="aff" value="0">STUDENT &emsp;
+<input type="radio" name="aff" value="1">STAFF &emsp;
+<input type="radio" name="aff" value="2">FACULTY
 <br>
-
 <br>
-<label for="id_position">YOUR CURRENT POSITION</label>
-<br>
-<input id="id_position" maxlength="30" type="text" name="position" size="20" />
+<input type="text" id="id_affmsg" name="affmsg" placeholder=" AFFILIATION MESSAGE (IF YOU HAVE ONE) " maxlength="200" size="40" />
 <br> 
-<label for="id_bio">WRITE A SHORT BIO FOR YOURSELF</label>
-<br> 
-<textarea id="id_bio" type = "text" name="bio" rows="3" cols="40">Just a mundane creature, a half-decent human being, a humble community member, a dedicated USF spirit.</textarea>
+<textarea type="text" id="id_bio" name="bio" rows="3" cols="40" maxlength="500" placeholder="WRITE A SHORT BIO FOR YOURSELF"></textarea>
 
 <br><br>
 
-<div class="page-subhero-text">Preferences of events</div>
-<input type="checkbox" name="preferences" value="lectures" checked/>Lectures
-<input type="checkbox" name="preferences" value="greek life" />Greek Life
-<input type="checkbox" name="preferences" value="clubs" />Clubs
 
+<div class="page-subhero-text">Preferences of events</div>
+<input type="checkbox" name="preferences" value="art"/>Art
+<input type="checkbox" name="preferences" value="music"/>Music
+<input type="checkbox" name="preferences" value="theater"/>Theater
+<input type="checkbox" name="preferences" value="academic"/>Academic
+<input type="checkbox" name="preferences" value="food"/>Food
+<input type="checkbox" name="preferences" value="festival"/>Festival
+<input type="checkbox" name="preferences" value="lecture"/>Lecture
+<input type="checkbox" name="preferences" value="service" />Service
+<input type="checkbox" name="preferences" value="holiday" />Holiday
 <br><br>
 
 <input type="submit" value="Register"/>
