--- a/media/static/style.css
+++ b/media/static/style.css
@@ -405,11 +405,6 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
   margin: 10px;
   width: 250px;
 }
-.content-major-block {
-  float: left;
-  margin: 10px;
-  width: 520px;
-}
 /* This defines the appearance of main-item; much more universal. */
 .main-item-style {
   background-color: #fff;
@@ -441,6 +436,11 @@ h1.entry-title {
 /* Entry content related */
 .entry-content {
   float: left;
+}
+.entry-content-block { 
+  float: left;
+  margin: 10px;
+  width: 520px; /* equals 2 main-item-blocks' grid */
 }
 .layout-entry-content .event-meta {
   margin: 0 0 15px;
